# quiz-backend

./: pyproject.toml  requirements.txt
config/: settings.py  urls.py
quiz/: models.py  serializers.py  views.py
quiz/migrations/: 0001_initial.py
usuario/: admin.py  authentication.py  managers.py  models.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_username.py  0003_alter_usuario_is_active_alter_usuario_is_staff.py  0004_usuario_is_verified_usuario_passage_id_and_more.py
