[project]
name = "quiz-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gabz047", email = "gabe1612mail@gmail.com"},
]
dependencies = [
    "django>=5.0.7",
    "djangorestframework>=3.15.2",
    "setuptools>=70.3.0",
    "django-cors-headers>=4.4.0",
    "djangorestframework-simplejwt>=5.3.1",
    "asgiref==3.8.1",
    "django==5.0.7",
    "django-cors-headers==4.4.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "pyjwt==2.8.0",
    "setuptools==70.3.0",
    "sqlparse==0.5.0",
    "typing-extensions==4.12.2; python_version < \"3.11\"",
    "tzdata==2024.1; sys_platform == \"win32\"",
    "drf-spectacular>=0.27.2",
    "django-extensions>=3.2.3",
    "drf-passage-identity>=0.0.3",
    "attrs==23.2.0",
    "blinker==1.8.2",
    "certifi==2024.7.4",
    "cffi==1.16.0; platform_python_implementation != \"PyPy\"",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6; platform_system == \"Windows\"",
    "cryptography==42.0.8",
    "django-extensions==3.2.3",
    "drf-passage-identity==0.0.3",
    "drf-spectacular==0.27.2",
    "flask==3.0.3",
    "idna==3.7",
    "inflection==0.5.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "markupsafe==2.1.5",
    "passage-identity>=2.1.4",
    "pycparser==2.22; platform_python_implementation != \"PyPy\"",
    "pyyaml==6.0.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rpds-py==0.19.0",
    "uritemplate==4.1.1",
    "urllib3==2.2.2",
    "werkzeug==3.0.3",
    "passage-identity==2.1.4",
    "openapi>=2.0.0",
    "openapi-client>=1.1.7",
    "google-api-python-client>=2.137.0",
    "openapi-python-client>=0.21.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python manage.py runserver localhost:8000"
runserver = "python manage.py runserver"
createsuperuser = "python manage.py createsuperuser"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

